part1/e2_e4_e5_e6_e8/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p1e4-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ex4
  template:
    metadata:
      labels:
        app: ex4
    spec:
      containers:
        - name: ex4
          image: mcfizh/dwk-part1:exercise2
