part1/e2_e4_e5_e6_e8/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ex6-svc
spec:
  type: NodePort
  selector:
    app: ex4
  ports:
  - nodePort: 30080
    protocol: TCP
    port: 3000
    targetPort: 3000
