part1/e2_e4_e5_e6_e8/manifests/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ex8-svc
spec:
  type: ClusterIP
  selector:
    app: ex4
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ex8-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: ex8-svc
          servicePort: 2345
